<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#2d89ff">
        <ImageView
            android:id="@+id/allysiqi_configure_app_card_back"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:onClick="goToHomescreen"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_white_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/allysiqi_configure_app_card_back"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:text="@string/allysiqi_navigation_privacy_manager"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#000000"
        android:text="@string/allysiqi_activity_spy_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/allysiqi_activity_spy_description"
        style="@style/subtext_dark"/>
    <TextView
        android:id="@+id/allysiqi_spy_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/allysiqi_spy_name_text"
        style="@style/text_dark"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:src="@drawable/spy_chart"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_gravity="end"
        android:orientation="horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:textColor="#438bf7"
            android:text="@string/allysiqi_its_fine"
            android:onClick="exitScreen"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#438bf7"
            android:textColor="#FFFFFF"
            android:text="@string/uninstall"
            android:onClick="exitScreen"/>
    </LinearLayout>
</LinearLayout>