<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">
    <RelativeLayout
        android:id="@+id/profile_add_step_two_nav_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#2d89ff">
        <ImageView
            android:id="@+id/policy_profile_step_two_back"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:onClick="back"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_white_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/policy_profile_step_two_back"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:onClick="toStepTwo"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:text="@string/policy_profiles"/>
    </RelativeLayout>
    <ImageView
        android:id="@+id/profile_add_step_two_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_add_step_two_nav_container"
        android:layout_centerHorizontal="true"
        android:src="@drawable/policy_profile_add_step_two_three"/>
    <TextView
        android:id="@+id/profile_add_step_two_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/profile_add_step_two_image"
        android:layout_centerHorizontal="true"
        android:text="@string/add_new_organizational_profile"
        style="@style/text_dark_bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@id/profile_add_step_two_title"
        android:text="@string/privacy_profile_add_description"
        style="@style/text_dark"/>
    <Button
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignTop="@id/profile_add_step_two_continue"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="35dp"
        android:layout_marginStart="35dp"
        android:onClick="cancel"
        android:textColor="@color/light_blue"
        android:text="@string/cancel_caps"
        style="@style/Widget.AppCompat.Button.Borderless"/>
    <Button
        android:id="@+id/profile_add_step_two_continue"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="35dp"
        android:onClick="toStepThree"
        android:background="@color/light_blue"
        android:textColor="#FFFFFF"
        android:text="@string/continue_caps"/>
</RelativeLayout>