<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="#2d89ff">
        <ImageView
            android:id="@+id/profile_add_step_one_back"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:onClick="exitPolicyProfileAdd"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_white_24dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/profile_add_step_one_back"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:onClick="toStepTwo"
            android:textSize="24sp"
            android:textColor="#FFFFFF"
            android:text="@string/policy_profiles"/>
    </RelativeLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/policy_profile_add_step_one"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/no_profiles"
        style="@style/text_dark_bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/what_are_privacy_profiles"
        style="@style/text_dark"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:background="@color/light_blue"
        android:textColor="#FFFFFF"
        android:onClick="toStepTwo"
        android:drawableStart="@drawable/ic_person_outline_white_24dp"
        android:paddingStart="30dp"
        android:paddingEnd="35dp"
        android:text="@string/add_profile"/>
</LinearLayout>